Unique groupId for internal speaker with RFPTarget::MediaDevices is unusual
Categories
(Core :: Privacy: Anti-Tracking, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr128 | --- | unaffected |
firefox138 | --- | wontfix |
firefox139 | --- | fix-optional |
firefox140 | --- | fix-optional |
People
(Reporter: jib, Assigned: fkilic)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
It's unusual for the default ("Internal") speaker and microphone to have different groupId.
STR:
- In about:config, set
privacy.resistFingerprinting
= true - Open https://jan-ivar.github.io/dummy/enumerate.html
- Click the
Start Mic!
button (and allow) - Click the
Enumerate devices!
button
Expected result (wo/privacy.resistFingerprinting or with a moden laptop in any other browser, modulo naming):
3 devices.
audioinput: Internal Microphone id=PjrPhB89CbU4WhFIvECQdXxMyTd6fJOydI/gTaBQTUQ= group=lTjdar1c/V5TmYuX40hzMt7kfmtTNv3OdptBe+l5gMg=
videoinput: id= group=
audiooutput: Internal Speaker id=26lHSLev+o9A4EErRvCzDyOLPH6kFcOvbLVTYGXvpa4= group=lTjdar1c/V5TmYuX40hzMt7kfmtTNv3OdptBe+l5gMg=
Actual result:
3 devices.
audioinput: Internal Microphone id=PjrPhB89CbU4WhFIvECQdXxMyTd6fJOydI/gTaBQTUQ= group=lTjdar1c/V5TmYuX40hzMt7kfmtTNv3OdptBe+l5gMg=
videoinput: id= group=
audiooutput: Internal Speaker id=26lHSLev+o9A4EErRvCzDyOLPH6kFcOvbLVTYGXvpa4= group=p81sB6f/S+anTUlxYWo+ZQQLpUWjyV6L/YZwdLHe4OY=
With https://github.com/w3c/mediacapture-output/pull/150 this no longer violates the spec, but stands out, at least on the platforms I've tested.
We discovered this in bug 1958963 where we decided to leave RFPTarget::MediaDevices
untouched with the old Firefox behavior of only exposing speakers with the same groupId as a microphone. That filtering relies on the internal raw group id which in both cases is builtin-internal-mic|spk
.
Comment 1•16 days ago
|
||
Set release status flags based on info from the regressing bug 1912023
:fkilic, since you are the author of the regressor, bug 1912023, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Assignee | ||
Comment 2•16 days ago
|
||
Hmm I think we need to make sure the group id is the same for speaker here https://searchfox.org/mozilla-central/rev/91cd9f3b8047176d84624ee2b8431e859f8d7bef/dom/media/MediaDevices.cpp#371. We can hardcode it to Fake Audio Group
or move the creation to fake engine enumerate devices. I'll work on it.
Assignee | ||
Comment 3•14 days ago
|
||
Updated•10 days ago
|
Updated•9 days ago
|
Updated•1 day ago
|
Description
•