Bug 1963371 - Use the same group name for Audio input and output. r=jib

Differential Revision: https://phabricator.services.mozilla.com/D247468